<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_theme"
    android:id="@+id/correct_fragment"
    tools:context=".CorrectAnswerFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/correct_answer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:gravity="center"
        android:fontFamily="@font/rubik_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/correct_answer_text" />

    <TextView
        android:id="@+id/correct_answer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct_next_question"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:gravity="center"
        android:fontFamily="@font/rubik_regular"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/correct_answer_title"
        app:layout_constraintBottom_toTopOf="@id/correct_page_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/correct_page_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        android:paddingVertical="30dp"
        android:paddingHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/correct_answer_text"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>